# GotParking

./: .gitignore  .vercelignore  CHANGELOG.md  CLAUDE.md  README.md  TODOS.md  requirements.txt  vercel.json
.github/workflows/: regen-seed-lists.yml  train.yml
api/: README.md  batch_predict.py  forecast.py  geocode_postal.py  pyproject.toml  requirements.txt
api/_lib/: __init__.py  batch_logic.py  config.py  features.py  geocode_logic.py  healthchecks.py  http_helpers.py  model_cache.py  onemap_client.py  read_logic.py  sg_time.py  supabase_rest.py  tiers.py
api/tests/: conftest.py  fakes.py  test_batch_predict.py  test_batch_predict_handler.py  test_config.py  test_features.py  test_forecast.py  test_forecast_handler.py  test_geocode_logic.py  test_healthchecks.py  test_http_helpers.py  test_model_cache.py  test_onemap_client.py  test_sg_time.py  test_supabase_rest.py  test_tiers.py
db/: README.md  schema.sql
docs/: provisioning-checklist.md  t0-load-test-2026-07-08.md  t0-sinpa-spike.md
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/scripts/: generate-icons.mjs
frontend/src/: App.test.tsx  App.tsx  index.css  main.tsx  types.ts
frontend/src/components/: AttributionFooter.tsx  ForecastCard.tsx  NotCoveredState.tsx  SearchPanel.tsx  ShortcutChips.tsx  ThemeToggle.tsx  TierBadge.tsx
frontend/src/hooks/: useDebouncedValue.ts  useForecast.test.ts  useForecast.ts  usePostalSearch.test.ts  usePostalSearch.ts  useShortcuts.test.ts  useShortcuts.ts  useTheme.ts
frontend/src/lib/: api.test.ts  api.ts  clipboard.test.ts  clipboard.ts  colorTokens.test.ts  colorTokens.ts  contrast.ts  haversine.test.ts  haversine.ts  postalGeocode.test.ts  postalGeocode.ts  shareLink.test.ts  shareLink.ts  shortcuts.test.ts  shortcuts.ts  staleness.test.ts  staleness.ts  theme.test.ts  theme.ts
frontend/src/seed/: seedCarparks.ts
frontend/src/test/: fixtures.ts  setup.ts
poller/: README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
poller/src/: carparks.ts  index.ts  momentum.ts  sgt.ts
poller/test/: baselineRefresh.test.ts  carparks.test.ts  cycle.test.ts  momentum.test.ts  momentumPagination.test.ts  parseSeedRows.test.ts  sgt.test.ts  wranglerConfig.test.ts
poller/test/support/: harness.ts  raw-imports.d.ts
scripts/: README.md  analyze_variance.py  build_mall_whitelist.py  onemap_client.py  onemap_enrich.py  poll_lta_carparks.py  pyproject.toml  recon_full_feed.py  recon_mall_whitelist.py  regen_seed_lists.py  run_full_feed_observation.py  t0_load_test.py
scripts/tests/: test_build_mall_whitelist.py  test_onemap_client.py  test_onemap_enrich.py  test_poll_lta_carparks.py  test_recon_full_feed.py  test_regen_seed_lists.py
scripts/tests/fixtures/: coverage_map_conflict.json  coverage_map_malformed.json  coverage_map_missing_name.json  coverage_map_valid.json  frontend_seedCarparks_after.ts  frontend_seedCarparks_before.ts  poller_carparks_after.ts
training/: README.md  pyproject.toml
training/src/gotparking_training/: __init__.py  __main__.py  cold_start.py  comparators.py  config.py  data_loading.py  features.py  gate.py  healthchecks.py  model_io.py  modeling.py  repository.py  series.py  sg_time.py  sinpa.py  supabase_rest.py  train.py
training/tests/: __init__.py  _load_api_module.py  conftest.py  fakes.py  test_cold_start.py  test_comparators.py  test_config.py  test_data_loading.py  test_features.py  test_gate.py  test_healthchecks.py  test_model_io.py  test_modeling.py  test_repository.py  test_series.py  test_sg_time.py  test_sinpa.py  test_supabase_rest.py  test_train.py
