[project]
name = "gotparking-api"
version = "0.1.0"
description = "GotParking Vercel Python functions (T4): batch-predict + public forecast read."
requires-python = ">=3.11"
dependencies = [
    "lightgbm>=4.3,<5",
    "numpy>=1.26,<3",
    "httpx>=0.27,<1",
]

[dependency-groups]
dev = [
    "pytest>=8.0,<9",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
# 3.12, not the 3.11 floor from requires-python: mypy would otherwise parse installed
# dependencies' bundled type stubs (e.g. numpy's) assuming an older Python than what
# executes, rejecting 3.12-only syntax those stubs use (same rationale as training/).
python_version = "3.12"
ignore_missing_imports = true
exclude = ["\\.venv"]
