[project]
name = "gotparking-training"
version = "0.1.0"
description = "GotParking weekly LightGBM training job (design doc T5): load, train, gate, promote."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "huggingface-hub>=0.23",
    "lightgbm>=4.3",
    "numpy>=1.26",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gotparking_training"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
