[project]
name = "gotparking-training"
version = "0.1.0"
description = "GotParking weekly LightGBM training job (design doc T5): load, train, gate, promote."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27,<1",
    "huggingface-hub>=0.23,<1",
    "lightgbm>=4.3,<5",
    "numpy>=1.26,<3",
]

[dependency-groups]
dev = [
    "pytest>=8.0,<9",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gotparking_training"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
