[project]
name = "gotparking-training"
version = "0.1.0"
description = "GotParking weekly LightGBM training job (design doc T5): load, train, gate, promote."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27,<1",
    "huggingface-hub>=0.23,<1",
    "lightgbm>=4.3,<5",
    "numpy>=1.26,<3",
]

[dependency-groups]
dev = [
    "pytest>=8.0,<9",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gotparking_training"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
# Matches .python-version (3.12), the interpreter this project actually runs
# under (both in CI and locally) -- pinning to the 3.11 floor from
# requires-python instead would make mypy parse installed dependencies'
# bundled type stubs (e.g. numpy's) assuming an older Python than what's
# really executing, which can reject syntax those stubs use.
python_version = "3.12"
ignore_missing_imports = true
